# sitemap-robots-parser

./: .gitignore  main.py  pyproject.toml
src/models/: Location.py
src/robots/: RobotsParser.py
src/sitemap/: SiteMapParser.py
src/tools/: Config.py  HttpClient.py  PrettyLoging.py
