[tool.poetry]
name = "sitemap-robots-parser"
version = "0.1.0"
description = ""
authors = ["Vebnik(Nik) <vebnik111@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.scripts]
start = "main:main"


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pytest = "^7.2.0"
grequests = "^0.6.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
